Fix modal overflow and centering

--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,6 @@
     color: var(--text);
 }
 
-/* Settings menu */
 /* Modal Background */
 .modal {
     display: none; /* Hidden by default */
@@ -87,7 +86,7 @@
     top: 0;
     width: 100%; 
     height: 100%;
-    overflow: auto;
+    overflow: none;
     background-color: rgba(0, 0, 0, 0.5); /* Black with transparency */
 }
 
@@ -95,7 +94,7 @@
 .modal-content {
     background-color: var(--background);
     color: var(--foreground);
-    margin: 15% auto;
+    margin: 10% auto;
     padding: 20px;
     border-radius: 8px;
     width: 50%;
